⛏ FIX: Navbar on Mobile/Tablets Screens

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -72,7 +72,11 @@
   }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 992px) {
+  .navbar {
+    background: var(--bs-dark);
+  }
+
   ul.navbar-nav {
     display: flex;
     justify-content: center;
